# LearnCMake

LinkThirdSrc/: CMakeLists.txt
LinkThirdSrc/cmake/: fmt.cmake
LinkThirdSrc/src/: main.cpp
